# FeiQ2

./: CMakeLists.txt  README.md
.VSCodeCounter/2025-06-06_11-33-03/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-06-10_22-34-24/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-06_19-41-02/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-09_16-56-19/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-27_17-51-36/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
code/: main.cpp
code/Mapper/: Mapper.h
code/MyControl/: MetaDataDefine.h
code/MyControl/MyLabel/: mylabel.cpp  mylabel.h
code/MyControl/MyWidget/: FriendChatWidget.cpp  FriendChatWidget.h  FriendItemWidget.cpp  FriendItemWidget.h  MessageBubble.cpp  MessageBubble.h
code/Sqlite3/: SqlLite.h
code/dataProcess/: DataProcess.cpp  DataProcess.h
code/fileSystem/: FileSystem.h
code/fileSystem/downloader/: downloader.cpp  downloader.h
code/fileSystem/uploader/: uploader.cpp  uploader.h
code/infoModule/: FriendInfo.h
code/infoModule/chatMessage/: chatMessageDAO.h  chatMessageDO.h  chatMessageMapper.h
code/jsonCpp/: dispositionMiddle.cpp  dispositionMiddle.h  dispositionReader.cpp  dispositionReader.h
code/logs/: logs.cpp  logs.h
code/mainwindow/: FriendItemWidget.cpp  FriendItemWidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingswidget.cpp  settingswidget.h  sharefilemanagerwidget.cpp  sharefilemanagerwidget.h
code/networkModule/: NetworkHelper.cpp  NetworkHelper.h  NetworkManager.cpp  NetworkManager.h  Socket.cpp  Socket.h
code/selfDomain/: SelfDomain.h
code/systemInfoHelper/: APIHelper.cpp  APIHelper.h  AdapterInfo.cpp  AdapterInfo.h  systemConfiguration.h  userLocalInfo.cpp  userLocalInfo.h
code/task/: CurrentTask.h  Mapper.h  TaskDispatcher.cpp  TaskDispatcher.h
code/taskDispatcher/: TaskDispatcher.h
code/threadPool/: ThreadPool.h
diary/: 2025.7.22.txt  2025.7.25.txt
setting/: functionSetting.json  networkSetting.json  personalInfo.json  systemSetting.json
source/: image.qrc
test/: CMakeLists.txt
test/BoostAsio/: test.cpp
test/BoostUdp/: CMakeLists.txt  test.cpp
test/GetLocalName/: test.cpp
test/GetLocalNet/: CMakeLists.txt  test.cpp
test/OpenSSLtest/: CMakeLists.txt  test.cpp  说明.md
test/SqlLite/: CMakeLists.txt  test.cpp  test.db
test/front/: CMakeLists.txt
test/jsonCpp/: CMakeLists.txt  test.cpp  test_json.json
test/zlib/: CMakeLists.txt  test.cpp
ui/: mainwindow.ui
